# rust-irc-server

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml
src/: configuration.rs  lib.rs  main.rs  templates.rs
src/debug/: mod.rs
src/parser/: .mod.rs.swp  errors.rs  mod.rs
src/service/: channel.rs  codec.rs  connection.rs  data.rs  messages.rs  mod.rs  processor.rs  proto.rs  responses.rs  server.rs  shared_state.rs  stats.rs  templates.rs  user.rs
src/service/client/: mod.rs  processor.rs
src/service/messages/: deserializer.rs  mod.rs  parser.rs  requests.rs  responses.rs  serializer.rs
src/service/messages/commands/: mod.rs  requests.rs  responses.rs
