[package]
name = "irc_server"
version = "0.1.0"
authors = ["Laza Upatising <lazau@lazau.com>"]

[dependencies]
bytes = "^0.4"
chrono = "^0.4"
env_logger = "^0.4"
futures = "^0.1"
futures-cpupool = "^0.1"
getopts = "^0.2"
handlebars = "^0.29"
hostname = "^0.1"
hyper = "^0.11"
log = "^0.3"
num_cpus = "^1.7"
rand = "^0.3"
serde = "^1.0"
serde_yaml = "^0.7"
serde_derive = "^1.0"
tokio-core = "^0.1"
tokio-io = "^0.1"
tokio-proto = "^0.1"
tokio-service = "^0.1"
